# ruuvi-sensor-protocol-rs

./: Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: rust.yml
src/: errors.rs  lib.rs  testing.rs
src/formats/: generic.rs  mod.rs  testing.rs  traits.rs  util.rs  v3.rs  v5.rs
src/gateway/: data.rs  mod.rs  mqtt.rs
src/sensordata/: mod.rs  v3.rs
