[package]
name = "ruuvi-sensor-protocol"
version = "0.6.0-dev.0"
authors = ["Atte Lautanala <atte.lautanala@gmail.com>", "Henrik Lievonen <github@hli.fi>"]
edition = "2021"
rust-version = "1.56"
description = "Ruuvi sensor protocol parser implementation"
repository = "https://github.com/lautat/ruuvi-sensor-protocol-rs"
readme = "README.md"
keywords = ["ruuvi", "ruuvitag"]
categories = ["parser-implementations", "no-std"]
license = "MIT"

[badges.maintenance]
status = "passively-maintained"

[features]
default = ["std"]
gateway = ["serde", "serde_json", "std"]
std = []

[dependencies]

[dependencies.serde]
default-features = false
features = ["std", "derive"]
optional = true
version = "1.0.144"

[dependencies.serde_json]
default-features = false
features = ["std"]
optional = true
version = "1.0.85"
