[package]
name = "ruuvi-sensor-protocol"
version = "0.6.0-dev.0"
authors = ["Atte Lautanala <atte.lautanala@gmail.com>", "Henrik Lievonen <github@hli.fi>"]
edition = "2021"
rust-version = "1.60"
description = "Ruuvi sensor protocol parser implementation"
repository = "https://github.com/lautat/ruuvi-sensor-protocol-rs"
readme = "README.md"
keywords = ["ruuvi", "ruuvitag"]
categories = ["parser-implementations", "no-std"]
license = "MIT"

[badges.maintenance]
status = "passively-maintained"

[features]
default = ["std"]
gateway = ["hex", "serde", "serde_json", "std"]
std = ["serde_json?/std"]

[dependencies]

[dependencies.hex]
default-features = false
features = ["alloc"]
optional = true
version = "0.4.3"

[dependencies.serde]
default-features = false
features = ["alloc", "derive"]
optional = true
version = "1.0.144"

[dependencies.serde_json]
default-features = false
features = ["alloc"]
optional = true
version = "1.0.85"
