[package]
name = "ruuvi-sensor-protocol"
version = "0.6.2-dev.0"
authors = ["Atte Lautanala <atte@lautana.la>", "Henrik Lievonen <github@hli.fi>"]
edition = "2021"
rust-version = "1.60"
description = "Ruuvi sensor protocol parser implementation"
repository = "https://github.com/lautat/ruuvi-sensor-protocol-rs"
readme = "README.md"
keywords = ["ruuvi", "ruuvitag"]
categories = ["parser-implementations", "no-std"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[badges.maintenance]
status = "passively-maintained"

[features]
default = ["std"]
gateway = ["hex", "serde", "serde_json"]
std = ["serde_json?/std"]

[dependencies]

[dependencies.hex]
default-features = false
features = ["alloc"]
optional = true
version = "0.4.3"

[dependencies.serde]
default-features = false
features = ["alloc", "derive"]
optional = true
version = "1.0.144"

[dependencies.serde_json]
default-features = false
features = ["alloc"]
optional = true
version = "1.0.85"

[lints.clippy]
alloc-instead-of-core = "warn"
as-conversions = "warn"
assertions-on-result-states = "warn"
cargo = "warn"
dbg-macro = "warn"
decimal-literal-representation = "warn"
expect-used = "warn"
panic = "warn"
pedantic = "warn"
self-named-module-files = "warn"
std-instead-of-alloc = "warn"
std-instead-of-core = "warn"
todo = "warn"
unimplemented = "warn"
unwrap-used = "warn"
unreachable = "warn"

[lints.rust]
rust-2018-idioms = "warn"
